store_to_index working

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -3,210 +3,345 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0509bc6f-5660-4a69-951c-b91f02422e96",
+   "id": "65b8e659-d359-44fe-b334-52a6c2baff1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_huggingface import HuggingFaceEmbeddings\n",
-    "from langchain_community.vectorstores import Pinecone\n",
-    "from pinecone import Pinecone as pinecone\n",
     "from langchain_community.document_loaders import PyPDFLoader, DirectoryLoader\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter"
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain_community.embeddings import SentenceTransformerEmbeddings"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7296d4cc-6371-479b-9ef4-adcc6e7131a4",
+   "id": "846c5a0c-4a4f-4454-a595-5ac4d64a7a1e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PINECONE_API_KEY = \"e485b6b8-b6f4-4e95-b3b8-081584058e80\"\n",
-    "PINECONE_API_ENV = \"us-east-1\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "072ad4fb-91d8-4be5-96af-cec8e5e9353f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Extract data from the PDF\n",
-    "def load_pdf(data):\n",
-    "    loader = DirectoryLoader(data,\n",
-    "                    glob=\"*.pdf\",\n",
-    "                    loader_cls=PyPDFLoader)\n",
+    "# Function to extract data from the pdf file\n",
+    "def extract_data_from_pdf(data_dir):\n",
+    "    \"\"\"\n",
+    "    Function to extract data from the pdf file\n",
     "    \n",
+    "    Args:\n",
+    "    data_dir : str : Path to the directory containing the pdf files\n",
+    "    \n",
+    "    Returns:\n",
+    "    documents : list : List of documents extracted from the pdf files\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    loader = DirectoryLoader(data_dir, glob = \"*.pdf\", loader_cls = PyPDFLoader)\n",
     "    documents = loader.load()\n",
-    "\n",
     "    return documents"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "034ad368-fa8f-4f60-94b1-c4f1d878b3f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to split the text into chunks\n",
+    "def split_text_into_chunks(documents):\n",
+    "    \"\"\"\n",
+    "    Function to split the text into chunks\n",
+    "    \n",
+    "    Args:\n",
+    "    documents : list : List of documents\n",
+    "    \n",
+    "    Returns:\n",
+    "    chunks : list : List of chunks with text split into chunks\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    splitter = RecursiveCharacterTextSplitter(chunk_size = 500, chunk_overlap = 20)\n",
+    "    chunks = splitter.split_documents(documents)\n",
+    "    return chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "0386f2f1-d85d-42f6-8dc0-69a3fd6eeae1",
+   "id": "10105cdc-58fb-4168-b299-679f5a6f2baa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "extracted_data = load_pdf(\"../data/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "a82efdfb-ee1e-442d-92d8-37a51c77f3c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Create text chunks\n",
-    "def text_split(extracted_data):\n",
-    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size = 500, chunk_overlap = 20)\n",
-    "    text_chunks = text_splitter.split_documents(extracted_data)\n",
-    "\n",
-    "    return text_chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a4edd7b2-e218-467f-ab2d-31bdd3cfe6cf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "length of my chunk: 7020\n"
-     ]
-    }
-   ],
-   "source": [
-    "text_chunks = text_split(extracted_data)\n",
-    "print(\"length of my chunk:\", len(text_chunks))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "3b0b7ce4-b345-462d-9e46-c4286605fa0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#download embedding model\n",
-    "def download_hugging_face_embeddings():\n",
-    "    embeddings = HuggingFaceEmbeddings(model_name=\"sentence-transformers/all-MiniLM-L6-v2\")\n",
+    "# Function to download the embedding model\n",
+    "def download_embedding_model():\n",
+    "    \"\"\"\n",
+    "    Function to download the embedding model\n",
+    "    \n",
+    "    Args:\n",
+    "    model_name : str : Name of the model to download\n",
+    "    \n",
+    "    Returns:\n",
+    "    embeddings : object : Embedding model object\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    embeddings = SentenceTransformerEmbeddings(model_name=\"NeuML/pubmedbert-base-embeddings\")\n",
     "    return embeddings"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "9a33988d-4d4e-4185-8c0d-550695425342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_pinecone.vectorstores import Pinecone\n",
+    "from pinecone import Pinecone as pinecone\n",
+    "from dotenv import load_dotenv\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a885be9e-35d4-4276-b4c7-8e18339b1c07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "extracted_data = extract_data_from_pdf(data_dir=\"../data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0b82326a-b3fe-44dd-84b6-564c0845c38b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_chunks = split_text_into_chunks(extracted_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
-   "id": "83ca9061-b80b-4418-921d-6b4684be9a91",
+   "id": "69823a2d-b93d-47f4-916b-55c563bfddc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7020"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(text_chunks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "314d5e28-19f9-40af-9b21-61c8c12b4ee3",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\vinee\\Desktop\\Challenges\\Medical-Chatbot\\venv\\lib\\site-packages\\huggingface_hub\\file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "C:\\Users\\vinee\\Desktop\\Challenges\\Medical-Chatbot\\venv\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:119: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 0.3.0. An updated version of the class exists in the langchain-huggingface package and should be used instead. To use it run `pip install -U langchain-huggingface` and import as `from langchain_huggingface import HuggingFaceEmbeddings`.\n",
+      "  warn_deprecated(\n",
+      "C:\\Users\\vinee\\Desktop\\Challenges\\Medical-Chatbot\\venv\\lib\\site-packages\\huggingface_hub\\file_download.py:1132: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
-    "embeddings = download_hugging_face_embeddings()"
+    "embeddings = download_embedding_model()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1571d11e-d261-46a2-b2ec-e084c74c346d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "HuggingFaceEmbeddings(client=SentenceTransformer(\n",
-       "  (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
-       "  (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False, 'pooling_mode_weightedmean_tokens': False, 'pooling_mode_lasttoken': False, 'include_prompt': True})\n",
-       "  (2): Normalize()\n",
-       "), model_name='sentence-transformers/all-MiniLM-L6-v2', cache_folder=None, model_kwargs={}, encode_kwargs={}, multi_process=False, show_progress=False)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "embeddings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "2b145933-d370-4b14-805f-1d0078dfb197",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Length 384\n"
-     ]
-    }
-   ],
-   "source": [
-    "query_result = embeddings.embed_query(\"Hello world\")\n",
-    "print(\"Length\", len(query_result))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "a78b1d5c-b959-47ef-840d-df51f60d3a15",
+   "id": "6ee4b751-6420-47be-ae67-ee08ce4a4dfa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Initializing the Pinecone\n",
-    "pc = pinecone(\n",
-    "        api_key=PINECONE_API_KEY\n",
-    "    )\n",
-    "index_name=\"medicine\"\n",
-    "\n",
-    "#Creating Embeddings for Each of The Text Chunks & storing\n",
-    "docsearch=Pinecone.from_texts([t.page_content for t in text_chunks], embeddings, index_name=index_name)"
+    "from langchain_pinecone import PineconeVectorStore"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a6856277-4a7e-4af9-8238-4201b596379d",
+   "execution_count": 12,
+   "id": "700253e3-2651-4aff-88df-5cba97300ead",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "PINECONE_API_KEY = \"e485b6b8-b6f4-4e95-b3b8-081584058e80\"\n",
+    "PINECONE_API_ENV = \"us-east-1\"\n",
+    "PINECONE_INDEX_NAME = \"medicine\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "26adee07-deb3-498b-98ca-187a81650bc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorStore = PineconeVectorStore.from_texts([chunk.page_content for chunk in text_chunks], embeddings, index_name=PINECONE_INDEX_NAME)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "598e74e8-ddb2-4672-bb61-e3fed943a244",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain import PromptTemplate\n",
+    "from langchain_community.llms import LlamaCpp\n",
+    "from langchain.chains import RetrievalQA\n",
+    "from langchain.chains import ConversationalRetrievalChain\n",
+    "from langchain.prompts import SystemMessagePromptTemplate\n",
+    "import os\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e1943a9d-bf5d-4c88-b2aa-ece1b6a772ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_llm = \"../models/BioMistral-7B.Q4_K_M.gguf\"\n",
+    "llm = LlamaCpp(model_path= \n",
+    "local_llm,temperature=0.3,max_tokens=2048,top_p=1,n_ctx= 4096, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ca357556-c24d-4616-930d-9721e2d84c62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_template = \"\"\"Use the following pieces of information to answer the user's question.\n",
+    "If you don't know the answer, just say that you don't know, don't try to make up an answer.\n",
+    "\n",
+    "Chat History: {chat_history}\n",
+    "Question: {question}\n",
+    "\n",
+    "Only return the helpful answer. Answer must be detailed and well explained.\n",
+    "Helpful answer:\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f6a4d24f-9870-4bad-826d-4a6c62effafe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "retriever = vectorStore.as_retriever(search_kwargs={\"k\":1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ddeee1df-9cef-4814-afe4-d85d3c0ba9da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chat_history = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "65fcdecc-f8ec-4c25-b4f2-f176efdc15b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # Create the custom chain\n",
+    "if llm is not None and retriever is not None:   \n",
+    "    chain = ConversationalRetrievalChain.from_llm(llm=llm,retriever=retriever)\t\n",
+    "else:     \n",
+    "    print(\"LLM or Vector Database not initialized\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8ba6583f-fafc-463b-9df2-524fe6a793ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(message, history):\n",
+    "    history_langchain_format = []\n",
+    "    prompt = PromptTemplate(template=prompt_template,\n",
+    "    input_variables=[\"chat_history\", 'message'])\n",
+    "    response = chain.invoke({\"question\": message, \"chat_history\": chat_history})\n",
+    "    answer = response['answer']\n",
+    "    chat_history.append((message, answer))\n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "33d99306-d2df-42e2-80bd-6c098c23c6e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\vinee\\Desktop\\Challenges\\Medical-Chatbot\\venv\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:119: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' Diabetes mellitus is a condition in which'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict(\"What is diabetes?\", chat_history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "48a15e68-7d95-4f01-922b-3f5904314b32",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "HuggingFaceEmbeddings(client=SentenceTransformer(\n",
-       "  (0): Transformer({'max_seq_length': 256, 'do_lower_case': False}) with Transformer model: BertModel \n",
-       "  (1): Pooling({'word_embedding_dimension': 384, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False, 'pooling_mode_weightedmean_tokens': False, 'pooling_mode_lasttoken': False, 'include_prompt': True})\n",
-       "  (2): Normalize()\n",
-       "), model_name='sentence-transformers/all-MiniLM-L6-v2', cache_folder=None, model_kwargs={}, encode_kwargs={}, multi_process=False, show_progress=False)"
+       "' Yes, I can help with that. The reason why we have to ask for consent is because the patient has a right to know what is going on and they have a right to refuse treatment or they have a right to withdraw from treatment at any time.'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "predict(\"Can you expand, the answer is incomplete\", chat_history)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65b8e659-d359-44fe-b334-52a6c2baff1d",
+   "id": "ee256e7f-e94a-4a96-81a1-156fca947813",
    "metadata": {},
    "outputs": [],
    "source": []
