Make an interface and look into the predictor function

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0a309f67-40ab-4ae6-9a24-80c8eeab6100",
+   "metadata": {},
+   "source": [
+    "Name of the books:\n",
+    "1. Medicine- Harrison's principle of internal medicine\n",
+    "2. Surgery- love and bailey\n",
+    "3. Paediatrics- Ghai essential pediatrics \n",
+    "4. Dermatology- illustrated synopsis of dermatology and sexually transmitted diseases by Neena Khanna"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "65b8e659-d359-44fe-b334-52a6c2baff1d",
@@ -85,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "9a33988d-4d4e-4185-8c0d-550695425342",
    "metadata": {},
    "outputs": [],
@@ -139,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "314d5e28-19f9-40af-9b21-61c8c12b4ee3",
    "metadata": {},
    "outputs": [
@@ -160,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "6ee4b751-6420-47be-ae67-ee08ce4a4dfa",
    "metadata": {},
    "outputs": [],
@@ -170,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "700253e3-2651-4aff-88df-5cba97300ead",
    "metadata": {},
    "outputs": [],
@@ -193,7 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
+   "id": "5f6f6e66-fce0-4b9e-84be-b2f9d0299a10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorStore = PineconeVectorStore(index_name=PINECONE_INDEX_NAME, embedding=embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "598e74e8-ddb2-4672-bb61-e3fed943a244",
    "metadata": {},
    "outputs": [],
@@ -209,19 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "e1943a9d-bf5d-4c88-b2aa-ece1b6a772ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "local_llm = \"../models/BioMistral-7B.Q4_K_M.gguf\"\n",
     "llm = LlamaCpp(model_path= \n",
-    "local_llm,temperature=0.3,max_tokens=2048,top_p=1,n_ctx= 4096, verbose=False)"
+    "local_llm,temperature=0.3,max_tokens=4096,top_p=1,n_ctx= 4096, verbose=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "ca357556-c24d-4616-930d-9721e2d84c62",
    "metadata": {},
    "outputs": [],
@@ -239,27 +261,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "f6a4d24f-9870-4bad-826d-4a6c62effafe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "retriever = vectorStore.as_retriever(search_kwargs={\"k\":1})"
+    "retriever = vectorStore.as_retriever(search_kwargs={\"k\":3})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "ddeee1df-9cef-4814-afe4-d85d3c0ba9da",
    "metadata": {},
    "outputs": [],
    "source": [
-    "chat_history = []\n"
+    "chat_history = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "65fcdecc-f8ec-4c25-b4f2-f176efdc15b2",
    "metadata": {},
    "outputs": [],
@@ -273,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "8ba6583f-fafc-463b-9df2-524fe6a793ca",
    "metadata": {},
    "outputs": [],
@@ -283,6 +305,7 @@
     "    prompt = PromptTemplate(template=prompt_template,\n",
     "    input_variables=[\"chat_history\", 'message'])\n",
     "    response = chain.invoke({\"question\": message, \"chat_history\": chat_history})\n",
+    "    print(response.keys())\n",
     "    answer = response['answer']\n",
     "    chat_history.append((message, answer))\n",
     "    return answer"
@@ -290,31 +313,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "33d99306-d2df-42e2-80bd-6c098c23c6e4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\vinee\\Desktop\\Challenges\\Medical-Chatbot\\venv\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:119: LangChainDeprecationWarning: The method `Chain.__call__` was deprecated in langchain 0.1.0 and will be removed in 0.3.0. Use invoke instead.\n",
-      "  warn_deprecated(\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "' Diabetes mellitus is a condition in which'"
+       "' Diabetes is a disease that can affect the way your body uses sugar. There are two types of diabetes. Type 1 diabetes is caused by a problem with the insulin producing cells in the pancreas. Type 2 diabetes is caused by a combination of genetic and lifestyle factors, such as being overweight or obese.'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "predict(\"What is diabetes?\", chat_history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "1b29a142-8918-49fd-a34e-498b796d863c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['question', 'chat_history', 'answer'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'  Type I is caused by a deficiency of insulin production, while type II is characterized by insulin resistance. Treatment of type I diabetes is limited to insulin replacement, while type II diabetes is treatable by a number of therapeutic approaches. Many cases of insulin resistance are asymptomatic due to normal increases in insulin secretion, and others may be controlled by diet and exercise . Drug therapy may be directed towards hypertension, kidney disease, and diabetes than it is for overweight people with no health problems,” she said. People with diabetes taking insulin are at risk of becoming hypoglycemic if they do not eat appropriate carbohydrates. Also, persons who exercise regularly may experience low energy levels and muscle fatigue from low carbohydrate intake.'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict(\"How can we prevent it?\", chat_history)"
    ]
   },
   {
@@ -340,8 +383,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ee256e7f-e94a-4a96-81a1-156fca947813",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['question', 'chat_history', 'answer'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' Cerebral stroke is a term describing a procedure used to restore blood flow and re-establish circulation in the brain after an obstruction, usually caused by a clot or blockage.'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict(\"What is cerebral stroke?\", chat_history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "bcd7862f-9b2a-4f23-b9e8-323cf87cb771",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'  There are several ways to prevent cerebral stroke, including controlling high blood pressure, quitting smoking, reducing alcohol intake, eating a healthy diet, and exercising regularly.'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict(\"How can we prevent it?\", new_chat_history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "22fda11a-02e7-4841-9af6-ed49ad173133",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' The purpose of an abdominal ultrasound is to examine the abdomen and organs within it, such as the liver, pancreas, spleen, kidneys, and bladder.'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict(\"What is the purpose of abdominal ultrasound?\", new_chat_history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f8bdbbe-1079-4877-8a67-4957c7223214",
    "metadata": {},
    "outputs": [],
    "source": []
