--- a/research/Working_model.ipynb
+++ b/research/Working_model.ipynb
@@ -5,7 +5,7 @@
    "id": "0a9c60e4-17fd-4f6a-829b-ac228fc4e4da",
    "metadata": {},
    "source": [
-    "This notebook will have a fully functional and better conversational chatbot. - using RAG chains"
+    "This notebook contains a fully functional and better conversational chatbot. - using RAG chains"
    ]
   },
   {
@@ -351,11 +351,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d6561950-04ca-491c-b049-45b7c45cebea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import gradio as gr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0964c0de-eed9-40b1-91f4-f6453a4a77be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(message, history):\n",
+    "    history_langchain_format = []\n",
+    "    for human, ai in history:\n",
+    "        history_langchain_format.append(HumanMessage(content=human))\n",
+    "        history_langchain_format.append(AIMessage(content=ai))\n",
+    "    history_langchain_format.append(HumanMessage(content=message))\n",
+    "    ai_msg = rag_chain.invoke({\"question\": question, \"chat_history\": history_langchain_format})\n",
+    "    return ai_msg.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4cb5060d-ed48-4208-945a-4994d3452a97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on local URL:  http://127.0.0.1:7861\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gr.ChatInterface(predict).launch()"
+   ]
   }
  ],
  "metadata": {
