MVP in modular coding working

--- a/research/Working_model.ipynb
+++ b/research/Working_model.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = \"I am having a severe headache and my eyes are strained and there is a little redness in the eye.\""
+    "# question = \"I am having a severe headache and my eyes are strained and there is a little redness in the eye.\""
    ]
   },
   {
@@ -256,24 +256,13 @@
    "execution_count": 15,
    "id": "1f94d562-618f-46d0-b7de-c9e2d661b5a1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content=\"Based on your symptoms, you might be experiencing eye strain, possibly due to overuse of digital screens, reading, or lack of sleep. The headache could be a tension headache resulting from the eye strain. \\n\\nHere's some general advice:\\n- **Rest your eyes:** Take frequent breaks from screens and reading.\\n- **Adjust screen brightness:** Reduce the brightness of your computer or phone screen.\\n- **Eye drops:** Use over-the-counter lubricating eye drops to relieve dryness.\\n- **Stay hydrated:** Drink plenty of water.\\n- **Pain relief:** Over-the-counter pain relievers like ibuprofen or acetaminophen can help with the headache.\\n\\nIf your symptoms persist or worsen, it's essential to consult a healthcare professional to rule out other conditions. \\n\", response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': [{'category': 'HARM_CATEGORY_SEXUALLY_EXPLICIT', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_HATE_SPEECH', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_HARASSMENT', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_DANGEROUS_CONTENT', 'probability': 'NEGLIGIBLE', 'blocked': False}]}, id='run-d7f0665d-ec3b-45ba-8e62-ab212be28f19-0', usage_metadata={'input_tokens': 1144, 'output_tokens': 159, 'total_tokens': 1303})"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "chat_history = []\n",
+    "# chat_history = []\n",
     "\n",
-    "ai_msg = rag_chain.invoke({\"question\": question, \"chat_history\": chat_history})\n",
-    "chat_history.extend([HumanMessage(content=question), ai_msg])\n",
-    "ai_msg"
+    "# ai_msg = rag_chain.invoke({\"question\": question, \"chat_history\": chat_history})\n",
+    "# chat_history.extend([HumanMessage(content=question), ai_msg])\n",
+    "# ai_msg"
    ]
   },
   {
@@ -281,27 +270,9 @@
    "execution_count": 16,
    "id": "d2a031ef-f648-4d7d-a97a-c30035d794a2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Based on your symptoms, you might be experiencing eye strain, possibly due to overuse of digital screens, reading, or lack of sleep. The headache could be a tension headache resulting from the eye strain. \n",
-      "\n",
-      "Here's some general advice:\n",
-      "- **Rest your eyes:** Take frequent breaks from screens and reading.\n",
-      "- **Adjust screen brightness:** Reduce the brightness of your computer or phone screen.\n",
-      "- **Eye drops:** Use over-the-counter lubricating eye drops to relieve dryness.\n",
-      "- **Stay hydrated:** Drink plenty of water.\n",
-      "- **Pain relief:** Over-the-counter pain relievers like ibuprofen or acetaminophen can help with the headache.\n",
-      "\n",
-      "If your symptoms persist or worsen, it's essential to consult a healthcare professional to rule out other conditions. \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(ai_msg.content)"
+    "# print(ai_msg.content)"
    ]
   },
   {
@@ -309,23 +280,12 @@
    "execution_count": 17,
    "id": "88d7284f-95ed-47ca-8dd5-a8c4de8973ff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content=\"Excessive tearing, along with headache, eye strain and redness, could indicate several things, some more serious than others. \\n\\nHere are some possibilities:\\n\\n* **Dry Eyes:** Ironically, excessive tearing can be a symptom of dry eyes. When your eyes are dry, they sometimes overcompensate by producing a flood of tears.\\n* **Allergies:**  Eye allergies are a common culprit for these symptoms. Pollen, pet dander, dust mites, and other allergens can irritate the eyes.\\n* **Conjunctivitis:**  Also known as pink eye, conjunctivitis (inflammation of the conjunctiva) can cause redness, tearing, and discomfort. \\n* **Other Infections:**  Viral or bacterial infections can lead to similar symptoms. \\n\\n**What to do:**\\n\\n* **Avoid Irritants:** If you suspect allergies, try to minimize exposure to potential allergens.\\n* **Warm Compress:** A warm compress can help soothe irritated eyes.\\n* **Over-the-Counter Relief:** Artificial tears can help with dryness. Antihistamine eye drops (for allergies) may be helpful as well.\\n\\n**When to see a doctor:**\\n\\n* **Symptoms worsen or persist:**  If your symptoms don't improve within a couple of days or if they worsen, see a doctor.\\n* **Vision changes:** Any changes in your vision warrant immediate medical attention.\\n* **Severe pain:**  Don't hesitate to seek medical help if you experience severe pain.\\n\\nRemember, I can't provide medical advice. It's crucial to consult a healthcare professional for a proper diagnosis and treatment plan. \\n\", response_metadata={'prompt_feedback': {'block_reason': 0, 'safety_ratings': []}, 'finish_reason': 'STOP', 'safety_ratings': [{'category': 'HARM_CATEGORY_SEXUALLY_EXPLICIT', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_HATE_SPEECH', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_HARASSMENT', 'probability': 'NEGLIGIBLE', 'blocked': False}, {'category': 'HARM_CATEGORY_DANGEROUS_CONTENT', 'probability': 'NEGLIGIBLE', 'blocked': False}]}, id='run-b12cafc7-c166-4d42-911c-01f445382dc5-0', usage_metadata={'input_tokens': 1305, 'output_tokens': 329, 'total_tokens': 1634})"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "question = \"there are alot of tears in eyes too. what can be some other causes?\"\n",
-    "ai_msg = rag_chain.invoke({\"question\": question, \"chat_history\": chat_history})\n",
-    "chat_history.extend([HumanMessage(content=question), ai_msg])\n",
-    "ai_msg"
+    "# question = \"there are alot of tears in eyes too. what can be some other causes?\"\n",
+    "# ai_msg = rag_chain.invoke({\"question\": question, \"chat_history\": chat_history})\n",
+    "# # chat_history.extend([HumanMessage(content=question), ai_msg])\n",
+    "# ai_msg"
    ]
   },
   {
@@ -333,20 +293,9 @@
    "execution_count": 18,
    "id": "6cb56a23-ff1d-485b-ab1c-b2f7ceb21fe6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Excessive tearing, along with headache, eye strain and redness, could indicate several things, some more serious than others. \\n\\nHere are some possibilities:\\n\\n* **Dry Eyes:** Ironically, excessive tearing can be a symptom of dry eyes. When your eyes are dry, they sometimes overcompensate by producing a flood of tears.\\n* **Allergies:**  Eye allergies are a common culprit for these symptoms. Pollen, pet dander, dust mites, and other allergens can irritate the eyes.\\n* **Conjunctivitis:**  Also known as pink eye, conjunctivitis (inflammation of the conjunctiva) can cause redness, tearing, and discomfort. \\n* **Other Infections:**  Viral or bacterial infections can lead to similar symptoms. \\n\\n**What to do:**\\n\\n* **Avoid Irritants:** If you suspect allergies, try to minimize exposure to potential allergens.\\n* **Warm Compress:** A warm compress can help soothe irritated eyes.\\n* **Over-the-Counter Relief:** Artificial tears can help with dryness. Antihistamine eye drops (for allergies) may be helpful as well.\\n\\n**When to see a doctor:**\\n\\n* **Symptoms worsen or persist:**  If your symptoms don't improve within a couple of days or if they worsen, see a doctor.\\n* **Vision changes:** Any changes in your vision warrant immediate medical attention.\\n* **Severe pain:**  Don't hesitate to seek medical help if you experience severe pain.\\n\\nRemember, I can't provide medical advice. It's crucial to consult a healthcare professional for a proper diagnosis and treatment plan. \\n\""
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ai_msg.content"
+    "# ai_msg.content"
    ]
   },
   {
@@ -361,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "0964c0de-eed9-40b1-91f4-f6453a4a77be",
    "metadata": {},
    "outputs": [],
@@ -372,13 +321,13 @@
     "        history_langchain_format.append(HumanMessage(content=human))\n",
     "        history_langchain_format.append(AIMessage(content=ai))\n",
     "    history_langchain_format.append(HumanMessage(content=message))\n",
-    "    ai_msg = rag_chain.invoke({\"question\": question, \"chat_history\": history_langchain_format})\n",
+    "    ai_msg = rag_chain.invoke({\"question\": message, \"chat_history\": history_langchain_format})\n",
     "    return ai_msg.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "4cb5060d-ed48-4208-945a-4994d3452a97",
    "metadata": {},
    "outputs": [
@@ -386,7 +335,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7861\n",
+      "Running on local URL:  http://127.0.0.1:7860\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -394,7 +343,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -407,7 +356,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
